--- a/templates/about.html
+++ b/templates/about.html
@@ -62,7 +62,7 @@
                 <div class="col-xs-12 col-md-6">
                   <h3>Impression</h3>
                   <p>I am comfortable in understanding problems and provide solutions for it. I prefer following established and proven approaches when dealing with any obstacles, appreciate the need for authority and rules and can adjust easily to this. I feel at ease when connecting with new people and generally have a well-developed network, pay attention to details and enjoy delivering work that is of a high standard. I tend to be systematic, methodical and organized and am reliable, disciplined and driven to achieve my goals.
-                  I am comfortable with working in rapidly changing environments. I enjoy taking the lead in groups and consider other's opinions when taking decisions. I recover quickly from setbacks and do not let negativity pull you down.</p>
+                  I am comfortable with working in rapidly changing environments. I enjoy taking the lead in groups and consider other's opinions when taking decisions. I recover quickly from setbacks and do not let negativity pull me down.</p>
                   <h3>Desired Role</h3>
                   <p>Roles which relate to development, analysis, data analytics or applying rational thinking to solve problems, which may involve managing multiple stakeholders or building deep relationships with key accounts, involving working with different cultures or geographies, requiring varied or changing competencies over time.</p>
                   <h3>Organization Fit</h3>
