--- a/templates/index.html
+++ b/templates/index.html
@@ -59,11 +59,11 @@
                 <span id="typed-strings">
                   <span>I'm Faizan Qazi</span>
                   <span>M.Tech in Embedded Systems & Solutions</span>
-                  <span>A Python Programmer. Almost forgot C/C++ 😉</span>
+                  <span>A Programmer</span>
                   <span>An Embedded IoT Solutions Developer</span>
+                  <span>A Full Stack Developer</span>
                   <span>A Snowboarder</span>
                   <span>And a Dancer</span>
-                  <span>Quite a list???Well Wing Chun is Next 😝</span>
                 </span>
                 <span id="typed"></span>
               </h1>
