--- a/static/css/tooplate-style.css
+++ b/static/css/tooplate-style.css
@@ -6,7 +6,7 @@ https://www.tooplate.com/view/2115-marvel
 
 */
 
-
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,700");
 
 body {
