--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-{% set skillset = ["Kubernetes", "Airflow"] %}
 <!doctype html>
 <html lang="en">
 
@@ -7,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <title>Welcome</title>
 
   <link rel="stylesheet" href="./static/css/bootstrap.min.css">
@@ -238,39 +237,45 @@
 
         <div class="col-lg-5 mr-lg-5 col-12">
 
-          <!-- For Map
-          <div class="google-map w-100">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12088.558402180099!2d-73.99373482142036!3d40.75895421922642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855b8fb3083%3A0xa0f9aef176042a5c!2sTheater+District%2C+New+York%2C+NY%2C+USA!5e0!3m2!1sen!2smm!4v1549875377188"
-              width="400" height="300" frameborder="0" style="border:0" allowfullscreen>
-            </iframe>
-          </div> -->
 
-          <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
+          <div class=" d-flex justify-content-between align-items-center py-4 px-lg-5">
             <div class="contact-info-item">
-              <h3 class="mb-3 text-white">Say hello</h3>
+              <h3 class="mb-4">Say hello</h3>
               <p class="footer-text mb-0"></p>
-              <li>
-                <span class="fa-icon">
-                  <i class="fa fa-at" aria-hidden="true"></i>
-                </span>
-                <a href="mailto:{{ data['basic']['email'] }}">{{ data['basic']['email'] }}</a>
-              </li>
-              <li>
-                <span class="fa-icon">
-                  <i class="fa fa fa-map-marker" aria-hidden="true"></i>
-                </span>
-                {{ data['basic']['address'] }}
-              </li>
+              <ul>
+                <li>
+                  <a href="https://www.linkedin.com/in/caxefaizan" title="" class="fa-icon">
+                    <i class="fa fa-linkedin"></i>
+                  </a><a href="https://medium.com/@caxefaizan" title="" class="fa-icon">
+                    <i class="fa fa-medium"></i>
+                  </a><a href="https://github.com/caxefaizan" title="" class="fa-icon">
+                    <i class="fa fa-github"></i>
+                  </a><a href="https://stackoverflow.com/users/14091289/caxefaizan" title="" class="fa-icon">
+                    <i class="fa fa-stack-overflow"></i>
+                  </a><a href="http://www.instagram.com/caxefaizan" title="" class="fa-icon">
+                    <i class="fa fa-instagram"></i>
+                  </a>
+                </li>
+                <li>
+                  <span class="fa-icon">
+                    <i class="fa fa-at" aria-hidden="true"></i>
+                  </span>
+                  <a href="mailto:{{ data['basic']['email'] }}">{{ data['basic']['email'] }}</a>
+                </li>
+                <li>
+                  <span class="fa-icon">
+                    <i class="fa fa fa-map-marker" aria-hidden="true"></i>
+                  </span>
+                  {{ data['basic']['address'] }}
+                </li>
+                <div class="google-map w-100">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497699.6907783481!2d77.03989648229923!3d12.954001177395384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka%2C%20India!5e0!3m2!1sen!2sus!4v1723370534463!5m2!1sen!2sus"
+                    width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+              </ul>
             </div>
-
-            <ul class="social-links">
-              <li><a href="#" class="uil uil-instagram" data-toggle="tooltip" data-placement="left"
-                  title="Instagram"></a></li>
-              <li><a href="https://www.linkedin.com/in/caxefaizan" title="" class="fa-icon">
-                  <i class="fa fa-linkedin"></i></li>
-              </a>
-            </ul>
           </div>
 
         </div>
@@ -311,9 +316,7 @@
       <div class="row">
 
         <div class="col-lg-12 col-12">
-          <p class="copyright-text text-center">Copyright &copy; 2019 Company Name . All rights reserved</p>
-          <p class="copyright-text text-center">Designed by <a rel="nofollow"
-              href="https://www.facebook.com/tooplate">Tooplate</a></p>
+          <p class="copyright-text text-center">2024</p>
         </div>
 
       </div>
