template ext links

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
                 <a href="{{ link['url'] }}"
                   target="_blank">
                   <img src="{{ link['imgsource'] }}" alt="Course Thumbnail"
-                    class="img-fluid" style="max-width: fit-content; max-height: fit-content; ">{{ link['title'] }}
+                    class="img-fluid" style="margin: auto; max-width: fit-content; max-height: fit-content; ">{{ link['title'] }}
                 </a>
               </div>
             </div>
